Horrible stretchy image fix for the profile images on User Profile page

--- a/modules/cms/client/scss/_partials/_context-user.scss
+++ b/modules/cms/client/scss/_partials/_context-user.scss
@@ -56,6 +56,8 @@
             border: 1px solid #c8c8c8;
             box-shadow: 0 0 15px 15px #ffffff;
             z-index: 10;
+            width: 15rem;
+            height: 15rem;
         }
     }
 
